# car-sharing

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example
migrations/2024-03-12-161058_create_users/: up.sql
migrations/2024-03-12-161104_create_cars/: up.sql
migrations/2024-03-13-153050_change_cars/: up.sql
migrations/2024-03-26-131327_create_sessions/: up.sql
migrations/2024-03-26-135911_change_users/: up.sql
migrations/2024-04-01-140242_change_users/: up.sql
migrations/2024-07-01-103237_create_users/: up.sql
migrations/2024-07-01-105801_create_cars/: up.sql
migrations/2024-07-01-105856_create_sessions/: up.sql
migrations/2024-07-01-112026_create_orders/: up.sql
scripts/: run.sh  run_api_tests.sh  run_unit_tests.sh
src/: config.rs  error.rs  main.rs  middlewares.rs  routes.rs
src/handlers/: mod.rs
src/handlers/auth/: login.rs  logout.rs  mod.rs
src/handlers/cars/: create_car.rs  delete_car.rs  get_car.rs  list_cars.rs  mod.rs  update_car.rs
src/handlers/orders/: accept_order.rs  cancel_order.rs  delete_order.rs  finish_rent.rs  get_order.rs  list_orders.rs  make_order.rs  mod.rs  orders_history.rs  set_paid.rs  start_rent.rs
src/infra/: error.rs  mod.rs
src/infra/db/: mod.rs  schema.rs
src/infra/services/: cars_service.rs  mod.rs  orders_service.rs  sessions_service.rs  users_service.rs
src/models/: car.rs  mod.rs  session_token.rs
tests/: auth.hurl  cars.hurl  orders.hurl  vars.env
