[package]
name = "car-sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4" }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
diesel = { version = "2.1.4", features = ["postgres", "uuid", "serde_json", "chrono"] }
deadpool-diesel = { version = "0.6.0", features = ["postgres"] }
tokio = { version = "1.35.1", features = ["full"] }
dotenvy = "0.15.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
chrono = { version = "0.4.33", features = ["serde"] }
tracing = "0.1.40"
env_logger = "0.11.1"
oauth2 = "4.4.2"
reqwest = "0.11.24"
headers = "0.4.0"
constant_time_eq = "0.3.0"
sha2 = "0.10.8"
hex-literal = "0.4.1"
hmac = "0.13.0-pre.3"
hex = "0.4.3"
digest = "0.10.7"
ring = "0.17.8"
pbkdf2 = "0.12.2"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
tower-cookies = "0.10.0"
bb8 = "0.8.3"
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
strum_macros = "0.26.2"
