[package]
name = "car-sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4" }
bb8 = "0.8.3"
chrono = { version = "0.4.33", features = ["serde"] }
digest = "0.10.7"
diesel = { version = "2.1.4", features = ["postgres", "uuid", "serde_json", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
diesel_migrations = { version = "2", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.1"
hex = "0.4.3"
hmac = "0.13.0-pre.3"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
ring = "0.17.8"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serial_test = "3.1.1"
sha2 = "0.10.8"
strum_macros = "0.26.2"
tokio = { version = "1.35.1", features = ["full"] }
tower-cookies = "0.10.0"
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

